<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EnrichedVideo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- NOM POUR LE TEMPS DE LA VIDEO À LA FERMETURE DE L'APPLI -->
    <string name="current_time_video" translatable="false">current_time</string>
    <string name="saving_time_file" translatable="false">saving_time_file</string>

    <!-- NOM DES CHAPITRES -->
    <string name="item_chapters">Chapters</string>
    <string name="big_buck_bunny" translatable="false">Big_buck_bunny</string>
    <string name="title">Title</string>
    <string name="butterfly">Butterfly</string>
    <string name="credits">Credits</string>

    <!-- CLES DES NOMS DE CHAPITRES -->
    <!-- Les clés doivent en accord avec les valeurs situées dans les fichiers 'urls.xml' et 'times.url' -->
    <string name="key_big_buck_bunny" translatable="false">Big_buck_bunny</string>
    <string name="key_title" translatable="false">Title</string>
    <string name="key_butterfly" translatable="false">Butterfly</string>
    <string name="key_credits" translatable="false">Credits</string>

    <string name="title_activity_settings">Settings</string>
    <!-- URL DE LA VIDEO À TÉLÉCHARGER -->
    <string name="video_url" translatable="false">http://download.blender.org/peach/bigbuckbunny_movies/BigBuckBunny_320x180.mp4</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name" translatable="false">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Thread watch frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>250 ms</item>
        <item>500 ms</item>
        <item>1 sec</item>
        <item>2 sec</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>250</item>
        <item>500</item>
        <item>1000</item>
        <item>2000</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <string name="pref_title_save_time">Save current position</string>
    <string name="pref_summary_save_time">Save last current position of the video when app is turned off</string>
    <string name="pref_save_time" translatable="false">save_time</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
